--- a/values.yaml
+++ b/values.yaml
@@ -577,6 +577,8 @@ ruler:
   enabled: true
   replicas: 1
   statefulSet: 
+    # -- If true, use a statefulset instead of a deployment for pod management.
+    # This is useful for using a persistent volume for storing rules between restarts.
     enabled: false
   service:
     annotations: {}
