--- a/values.yaml
+++ b/values.yaml
@@ -167,7 +167,7 @@ alertmanager:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -331,7 +331,7 @@ distributor:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -442,7 +442,7 @@ ingester:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -595,7 +595,7 @@ ruler:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -732,7 +732,7 @@ querier:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -837,7 +837,7 @@ query_frontend:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -928,7 +928,7 @@ query_scheduler:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -1017,7 +1017,7 @@ overrides_exporter:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -1103,7 +1103,7 @@ purger:
     relabelings: []
     metricRelabelings: []
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -1315,7 +1315,7 @@ store_gateway:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
@@ -1443,7 +1443,7 @@ compactor:
     metricRelabelings: []
     # -- Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
     extraEndpointSpec: {}
-    targetLabels: []
+    podTargetLabels: []
 
   resources: {}
 
