support configuration of gossip cluster port
Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

--- a/templates/alertmanager/alertmanager-statefulset.yaml
+++ b/templates/alertmanager/alertmanager-statefulset.yaml
@@ -178,10 +178,10 @@ spec:
             - name: grpc
               containerPort: {{ .Values.config.server.grpc_listen_port }}
               protocol: TCP
-            - containerPort: 9094
+            - containerPort: {{ (.Values.config.alertmanager.cluster.listen_address | default "0.0.0.0:9094" | split ":")._1 }}
               name: gossip-clu-tcp
               protocol: TCP
-            - containerPort: 9094
+            - containerPort: {{ (.Values.config.alertmanager.cluster.listen_address | default "0.0.0.0:9094" | split ":")._1 }}
               name: gossip-clu-udp
               protocol: UDP
           startupProbe:
