--- a/values.yaml
+++ b/values.yaml
@@ -631,33 +631,7 @@ ruler:
     enabled: true
 
   persistentVolume:
-    # -- If true and ruler.statefulSet.enabled is true,
-    # Ruler will create/use a Persistent Volume Claim
-    # If false, use emptyDir
-    enabled: true
-
-    # -- Ruler data Persistent Volume Claim annotations
-    annotations: {}
-
-    # -- Ruler data Persistent Volume access modes
-    # Must match those of existing PV or dynamic provisioner
-    # Ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
-    accessModes:
-      - ReadWriteOnce
-
-    # -- Ruler data Persistent Volume size
-    size: 2Gi
-
-    # -- Subdirectory of Ruler data Persistent Volume to mount
-    # Useful if the volume's root directory is not empty
-    subPath: ''
-
-    # -- Ruler data Persistent Volume Storage Class
-    # If defined, storageClassName: <storageClass>
-    # If set to "-", storageClassName: "", which disables dynamic provisioning
-    # If undefined (the default) or set to null, no storageClassName spec is
-    # set, choosing the default provisioner.
-    storageClass: null
+    subPath:
 
   startupProbe:
     httpGet:
