WIP: configure alertmanager HA cluster mode for sts
Signed-off-by: Niclas Schad <niclas.schad@gmail.com>

--- a/templates/alertmanager/alertmanager-statefulset.yaml
+++ b/templates/alertmanager/alertmanager-statefulset.yaml
@@ -1,3 +1,5 @@
+{{- $svcClusterAddress := ((.Values.config.alertmanager.cluster).listen_address) | default "0.0.0.0:9094" }}
+{{- $svcClusterPort := (split ":" $svcClusterAddress)._1 }}
 {{- if .Values.alertmanager.enabled -}}
 {{- if .Values.alertmanager.statefulSet.enabled -}}
 apiVersion: apps/v1
@@ -152,6 +154,12 @@ spec:
           args:
             - "-target=alertmanager"
             - "-config.file=/etc/cortex/cortex.yaml"
+            {{- if gt (int .Values.alertmanager.replicas) 1}}
+            {{- $fullName := include "cortex.alertmanagerFullname" . }}
+            {{- range $i := until (int .Values.alertmanager.replicas) }}
+            - "-alertmanager.cluster.peers={{ $fullName }}-{{ $i }}.{{ $fullName }}-headless.{{ $.Release.Namespace }}.svc.cluster.local:{{ $svcClusterPort }}"
+            {{- end }}
+            {{- end }}
             {{- range $key, $value := .Values.alertmanager.extraArgs }}
             - "-{{ $key }}={{ $value }}"
             {{- end }}
@@ -175,6 +183,15 @@ spec:
             - name: gossip
               containerPort: {{ .Values.config.memberlist.bind_port }}
               protocol: TCP
+            - name: grpc
+              containerPort: {{ .Values.config.server.grpc_listen_port }}
+              protocol: TCP
+            - containerPort: {{ $svcClusterPort }}
+              name: alert-clu-tcp
+              protocol: TCP
+            - containerPort: {{ $svcClusterPort }}
+              name: alert-clu-udp
+              protocol: UDP
           startupProbe:
             {{- toYaml .Values.alertmanager.startupProbe | nindent 12 }}
           livenessProbe:
