--- a/templates/alertmanager/alertmanager-svc-headless.yaml
+++ b/templates/alertmanager/alertmanager-svc-headless.yaml
@@ -21,6 +21,14 @@ spec:
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
+    - port: 9094
+      protocol: UDP
+      name: alert-clu-udp
+      targetPort: alert-clu-udp
+    - port: 9094
+      protocol: TCP
+      name: alert-clu-tcp
+      targetPort: alert-clu-tcp
   selector:
     {{- include "cortex.alertmanagerSelectorLabels" . | nindent 4 }}
 {{- end -}}
