--- a/templates/store-gateway/store-gateway-hpa.yaml
+++ b/templates/store-gateway/store-gateway-hpa.yaml
@@ -21,6 +21,9 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .targetMemoryUtilizationPercentage }}
+  {{- with .customMetrics }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   {{- with .behavior }}
   behavior:
     {{- toYaml . | nindent 4 }}
