--- a/values.yaml
+++ b/values.yaml
@@ -372,6 +372,24 @@ distributor:
     targetMemoryUtilizationPercentage: 0  # 80
     # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
     behavior: {}
+    # -- Optional custom and external metrics for the distributor pods to scale on
+    # In order to use this option , define a list of of specific following either:
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-metrics-not-related-to-kubernetes-objects
+    # 
+    # For example:
+    #
+    # - type: External
+    #   external:
+    #     metric:
+    #       name: queue_messages_ready
+    #       selector:
+    #         matchLabels:
+    #           queue: "worker_tasks"
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 30
+    customMetrics: []
 
   persistentVolume:
     subPath:
@@ -496,6 +514,24 @@ ingester:
           - type: Pods
             value: 1
             periodSeconds: 1800
+    # -- Optional custom and external metrics for the ingester pods to scale on
+    # In order to use this option , define a list of of specific following either:
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-metrics-not-related-to-kubernetes-objects
+    # 
+    # For example:
+    #
+    # - type: External
+    #   external:
+    #     metric:
+    #       name: queue_messages_ready
+    #       selector:
+    #         matchLabels:
+    #           queue: "worker_tasks"
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 30
+    customMetrics: []
 
   lifecycle:
     # -- The /shutdown preStop hook is recommended as part of the ingester
@@ -624,6 +660,24 @@ ruler:
     targetMemoryUtilizationPercentage: 80
     # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
     behavior: {}
+    # -- Optional custom and external metrics for the ruler pods to scale on
+    # In order to use this option , define a list of of specific following either:
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-metrics-not-related-to-kubernetes-objects
+    # 
+    # For example:
+    #
+    # - type: External
+    #   external:
+    #     metric:
+    #       name: queue_messages_ready
+    #       selector:
+    #         matchLabels:
+    #           queue: "worker_tasks"
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 30
+    customMetrics: []
 
   validation:
     # -- Checks that the ruler is compatible with horizontal scaling,
@@ -773,6 +827,24 @@ querier:
     targetMemoryUtilizationPercentage: 0  # 80
     # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
     behavior: {}
+    # -- Optional custom and external metrics for the querier pods to scale on
+    # In order to use this option , define a list of of specific following either:
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-metrics-not-related-to-kubernetes-objects
+    # 
+    # For example:
+    #
+    # - type: External
+    #   external:
+    #     metric:
+    #       name: queue_messages_ready
+    #       selector:
+    #         matchLabels:
+    #           queue: "worker_tasks"
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 30
+    customMetrics: []
 
   persistentVolume:
     subPath:
@@ -1293,6 +1365,24 @@ nginx:
     targetMemoryUtilizationPercentage: 0  # 80
     # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
     behavior: {}
+    # -- Optional custom and external metrics for the nginx pods to scale on
+    # In order to use this option , define a list of of specific following either:
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-metrics-not-related-to-kubernetes-objects
+    # 
+    # For example:
+    #
+    # - type: External
+    #   external:
+    #     metric:
+    #       name: queue_messages_ready
+    #       selector:
+    #         matchLabels:
+    #           queue: "worker_tasks"
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 30
+    customMetrics: []
 
 store_gateway:
   enabled: true
@@ -1354,6 +1444,24 @@ store_gateway:
     targetMemoryUtilizationPercentage: 80
     # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
     behavior: {}
+    # -- Optional custom and external metrics for the store gateway pods to scale on
+    # In order to use this option , define a list of of specific following either:
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+    # - https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-metrics-not-related-to-kubernetes-objects
+    # 
+    # For example:
+    #
+    # - type: External
+    #   external:
+    #     metric:
+    #       name: queue_messages_ready
+    #       selector:
+    #         matchLabels:
+    #           queue: "worker_tasks"
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 30
+    customMetrics: []
 
   persistentVolume:
     # -- If true Store-gateway will create/use a Persistent Volume Claim
