docs: update README format
Signed-off-by: Loc Mai <locmai0201@gmail.com>

--- a/templates/distributor/distributor-hpa.yaml
+++ b/templates/distributor/distributor-hpa.yaml
@@ -31,7 +31,7 @@ spec:
           type: Utilization
           averageUtilization: {{ . }}
   {{- end }}
-  {{- with .customMetrics }}
+  {{- with .extraMetrics }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
   {{- with .behavior }}
