--- a/templates/store-gateway/store-gateway-hpa.yaml
+++ b/templates/store-gateway/store-gateway-hpa.yaml
@@ -21,7 +21,7 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .targetMemoryUtilizationPercentage }}
-  {{- with .customMetrics }}
+  {{- with .extraMetrics }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
   {{- with .behavior }}
