Add option for configuring HPA with custom/external metrics (#467)
* feat: option for custom/external metrics HPA

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* docs: update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* fix: lint

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* docs: re-gen README

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* docs: update CHANGELOG

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* docs: update README format

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* fix: lint

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* chore: remove example

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* docs: shorten description

Signed-off-by: Loc Mai <locmai0201@gmail.com>

---------

Signed-off-by: Loc Mai <locmai0201@gmail.com>

--- a/templates/ingester/ingester-hpa.yaml
+++ b/templates/ingester/ingester-hpa.yaml
@@ -21,6 +21,9 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .targetMemoryUtilizationPercentage }}
+  {{- with .extraMetrics }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   {{- with .behavior }}
   behavior:
     {{- toYaml . | nindent 4 }}
