fix wrong name for grpc targetPort
Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

--- a/templates/alertmanager/alertmanager-svc-headless.yaml
+++ b/templates/alertmanager/alertmanager-svc-headless.yaml
@@ -19,8 +19,8 @@ spec:
   ports:
     - port: {{ .Values.config.server.grpc_listen_port }}
       protocol: TCP
-      name: http-metrics
-      targetPort: http-metrics
+      name: grpc
+      targetPort: grpc
     - port: 9094
       protocol: UDP
       name: alert-clu-udp
