Disabled by default
Signed-off-by: Friedrich Gonzalez <friedrichg@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1181,6 +1181,9 @@ purger:
       path: /ready
       port: http-metrics
 
+auth_gateway:
+  enabled: false
+
 nginx:
   enabled: true
   replicas: 2
