--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,11 +1,12 @@
 # Days without any activity until an issue is labeled as stale
-daysUntilStale: 30
+daysUntilStale: 60
 
 # Days after having the stale label that the issue will be closed
-daysUntilClose: 15
+daysUntilClose: 30
 
 # Labels that prevent issues from being marked as stale
 exemptLabels:
+  - dependencies
   - keepalive
   - bug
   - help wanted
@@ -17,7 +18,7 @@ staleLabel: stale
 # to disable.
 markComment: >
   This issue has been automatically marked as stale because it has not had any
-  activity in the past 30 days. It will be closed in 15 days if no further
+  activity in the past 60 days. It will be closed in 30 days if no further
   activity occurs. Thank you for your contributions.
 
 # Comment to post when closing a stale issue. Leave as
