Adds app protocol field
Signed-off-by: Manuel Kieweg <mkieweg@vectra.ai>

--- a/templates/svc-memberlist-headless.yaml
+++ b/templates/svc-memberlist-headless.yaml
@@ -16,6 +16,7 @@ spec:
   ports:
     - port: {{ .Values.config.memberlist.bind_port }}
       protocol: TCP
+      appProtocol: tcp
       name: gossip
       targetPort: gossip
   selector:
