--- a/templates/distributor/distributor-servicemonitor.yaml
+++ b/templates/distributor/distributor-servicemonitor.yaml
@@ -20,9 +20,9 @@ spec:
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
-  {{- if .Values.purger.serviceMonitor.podTargetLabels }}
+  {{- if .Values.distributor.serviceMonitor.podTargetLabels }}
   podTargetLabels:
-  {{- range .Values.purger.serviceMonitor.podTargetLabels }}
+  {{- range .Values.distributor.serviceMonitor.podTargetLabels }}
     - {{ . }}
   {{- end }}
   {{- end }}
