--- a/templates/querier/querier-servicemonitor.yaml
+++ b/templates/querier/querier-servicemonitor.yaml
@@ -20,9 +20,9 @@ spec:
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
-  {{- if .Values.purger.serviceMonitor.podTargetLabels }}
+  {{- if .Values.querier.serviceMonitor.podTargetLabels }}
   podTargetLabels:
-  {{- range .Values.purger.serviceMonitor.podTargetLabels }}
+  {{- range .Values.querier.serviceMonitor.podTargetLabels }}
     - {{ . }}
   {{- end }}
   {{- end }}
