--- a/templates/store-gateway/store-gateway-svc-headless.yaml
+++ b/templates/store-gateway/store-gateway-svc-headless.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.config.storage.engine "blocks") .Values.store_gateway.enabled -}}
+{{- if .Values.store_gateway.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
