fix: change headless service to gRPC and expose 9094 TCP (#494)
* change alertmanager-svc-headless from http to grpc port

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* edit CHANGELOG.md

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* expose 9094 TCP UDP for gossip cluster

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* support configuration of gossip cluster port

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* WIP: configure alertmanager HA cluster mode for sts

Signed-off-by: Niclas Schad <niclas.schad@gmail.com>

* configure alertmanager cluster peers as comma seperated list

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* clarify values.yaml about cluster enable by default

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* replicaset should not set -alertmanager-cluster-peers when cluster is disable

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* fix wrong name for grpc targetPort

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* re-introduce alertmanager-dep.yaml

Signed-off-by: AlexandreRoux <alexandreroux42@protonmail.com>

* docs: update READEME.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* add Alertmanager scope

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* add http-metrics back

Signed-off-by: Loc Mai <locmai0201@gmail.com>

* update CHANGELOG.md

Signed-off-by: Loc Mai <locmai0201@gmail.com>

---------

Signed-off-b

--- a/templates/alertmanager/alertmanager-statefulset.yaml
+++ b/templates/alertmanager/alertmanager-statefulset.yaml
@@ -1,3 +1,5 @@
+{{- $svcClusterAddress := ((.Values.config.alertmanager.cluster).listen_address) | default "0.0.0.0:9094" }}
+{{- $svcClusterPort := (split ":" $svcClusterAddress)._1 }}
 {{- if .Values.alertmanager.enabled -}}
 {{- if .Values.alertmanager.statefulSet.enabled -}}
 apiVersion: apps/v1
@@ -152,6 +154,15 @@ spec:
           args:
             - "-target=alertmanager"
             - "-config.file=/etc/cortex/cortex.yaml"
+            {{- if and (gt (int .Values.alertmanager.replicas) 1) (ne .Values.config.alertmanager.cluster.listen_address "") }}
+            {{- $fullName := include "cortex.alertmanagerFullname" . }}
+            {{- $peers := list }}
+            {{- range $i := until (int .Values.alertmanager.replicas) }}
+	      {{- $peer := printf "%s-%d.%s-headless.%s.svc.cluster.local:%s" $fullName $i $fullName $.Release.Namespace $svcClusterPort }}
+              {{- $peers = append $peers $peer }}
+            {{- end }}
+            - "-alertmanager.cluster.peers={{ join "," $peers }}"
+            {{- end }}
             {{- range $key, $value := .Values.alertmanager.extraArgs }}
             - "-{{ $key }}={{ $value }}"
             {{- end }}
@@ -175,6 +186,15 @@ spec:
             - name: gossip
               containerPort: {{ .Values.config.memberlist.bind_port }}
               protocol: TCP
+            - name: grpc
+              containerPort: {{ .Values.config.server.grpc_listen_port }}
+              protocol: TCP
+            - containerPort: {{ $svcClusterPort }}
+              name: alert-clu-tcp
+              protocol: TCP
+            - containerPort: {{ $svcClusterPort }}
+              name: alert-clu-udp
+              protocol: UDP
           startupProbe:
             {{- toYaml .Values.alertmanager.startupProbe | nindent 12 }}
           livenessProbe:
