remove default livenessProbe for compactor and storage-gateway (#502)
* remove default livenessProbe for compactor and storage-gateway

Signed-off-by: Niclas Schad <niclas.schad@gmail.com>

* pr review: use correct brackets

Signed-off-by: Niclas Schad <niclas.schad@gmail.com>

---------

Signed-off-by: Niclas Schad <niclas.schad@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1410,11 +1410,7 @@ store_gateway:
       path: /ready
       port: http-metrics
       scheme: HTTP
-  livenessProbe:
-    httpGet:
-      path: /ready
-      port: http-metrics
-      scheme: HTTP
+  livenessProbe: {}
   readinessProbe:
     httpGet:
       path: /ready
@@ -1530,11 +1526,7 @@ compactor:
       path: /ready
       port: http-metrics
       scheme: HTTP
-  livenessProbe:
-    httpGet:
-      path: /ready
-      port: http-metrics
-      scheme: HTTP
+  livenessProbe: {}
   readinessProbe:
     httpGet:
       path: /ready
