Remove startup probe from compactor (#542)
* Remove startup probe from compactor

In some circumstances the compactor might take a long time to start and that is not really a bug. For example when there is a high number of partial blocks to read.

* Update CHANGELOG.md

* more

more

* Update README.md

* Fix when startupProbe is empty

Signed-off-by: Friedrich Gonzalez <friedrichg@gmail.com>

---------

Signed-off-by: Friedrich Gonzalez <friedrichg@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1547,14 +1547,7 @@ compactor:
     # whenDeleted: Retain
     # whenScaled: Retain
 
-  startupProbe:
-    failureThreshold: 60
-    initialDelaySeconds: 120
-    periodSeconds: 30
-    httpGet:
-      path: /ready
-      port: http-metrics
-      scheme: HTTP
+  startupProbe: {}
   livenessProbe: {}
   readinessProbe:
     httpGet:
