Fix default affinity overrides-exporter
Signed-off-by: Friedrich Gonzalez <1517449+friedrichg@users.noreply.github.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1068,7 +1068,7 @@ overrides_exporter:
                 - key: app.kubernetes.io/component
                   operator: In
                   values:
-                    - query-scheduler
+                    - overrides-exporter
             topologyKey: 'kubernetes.io/hostname'
 
   annotations: {}
